--- a/DP_Consensus.ipynb
+++ b/DP_Consensus.ipynb
@@ -217,6 +217,14 @@
         "\n",
         "def directed_dp_con(N, sel_num, agentN, paraN, epsilon, sigma, mode):\n",
         "\n",
+        "# N: number of iterations\n",
+        "# sel_num: number of sparsified entries\n",
+        "# agentN: number of nodes in the network, n\n",
+        "# paraN: size of the local vectors, d\n",
+        "# epsilon: mixing matrix parameter, \\tau\n",
+        "# sigma: noise standard deviation\n",
+        "# mode: \"f\" - non-private, \"dp\" - private\n",
+        "\n",
         "    z_a1_cons=z_init\n",
         "    loss_z_cons=[]\n",
         "    for i in range(int(N)):\n",
