--- a/DP_Linear.ipynb
+++ b/DP_Linear.ipynb
@@ -387,6 +387,16 @@
         "# Linear Regression\n",
         "\n",
         "def directed_dp_opti(N, sel_num, agentN, paraN, epsilon, sigma, mode):\n",
+        "\n",
+        "# N: number of iterations\n",
+        "# sel_num: sparsification level\n",
+        "# agentN: number of nodes in the network, n\n",
+        "# paraN: size of the local vectors, d\n",
+        "# epsilon: mixing matrix parameter, \\tau\n",
+        "# sigma: noise standard deviation\n",
+        "# mode: \"f\" - non-private, \"dp\" - private\n",
+        "\n",
+        "\n",
         "    x_star_init=np.array([10*np.random.random(size=paraN)-5 for j in range(agentN)])\n",
         "    x_star_init=np.array([[x_star_init[i][j] if abs(x_star_init[i][j])<5 else 5 for j in range(paraN)] for i in range(agentN)])\n",
         "    x_star_consensus_ave=np.sum(x_star_init, axis=0)/agentN\n",
