--- a/DP_LogisticRegression.ipynb
+++ b/DP_LogisticRegression.ipynb
@@ -269,6 +269,16 @@
         "import random\n",
         "\n",
         "def Logistic_dgd_dp(mu, num_tags, VOCAB_SIZE, N, sel_num, sigma, mode):\n",
+        "\n",
+        "# mu: regularization parameter\n",
+        "# num_tags: number of tags\n",
+        "# VOCAB_SIZE: vocabulary size\n",
+        "# N: number of iterations\n",
+        "# sel_num: sparsification level\n",
+        "# epsilon: mixing matrix parameter, \\tau\n",
+        "# sigma: noise standard deviation\n",
+        "# mode: \"f\" - non-private, \"dp\" - private\n",
+        "\n",
         "  x_a1_lr=ts2=tf.Variable(tf.random.normal([num_tags, VOCAB_SIZE, agentN_lr]))\n",
         "  # x_a1_lr=ts2=tf.Variable(tf.zeros([num_tags, VOCAB_SIZE, agentN_lr]))\n",
         "  y_a1_lr=tf.Variable(tf.zeros((num_tags, VOCAB_SIZE, agentN_lr)))\n",
@@ -351,8 +361,7 @@
         "        elif sel_num=='none':\n",
         "          w_num=agentN-1\n",
         "        else:\n",
-        "          w_num=int(ma.floor(len(w_list)/2))\n",
-        "#        w_id=random.sample(w_list,w_num)\n",
+        "        w_id=random.sample(w_list,w_num)\n",
         "        w_id=[k for k in range(agentN_lr) if m_idm[k, j] == 0 and k != m]\n",
         "        A_new[m][w_id]=0\n",
         "        B_new[m][w_id]=0\n",
